<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:id="@+id/view_main"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/view_major"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_objects"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/view_objects"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_rectangle_for_weather" />

        <View
            android:id="@+id/view_rectangle_for_weather"
            android:layout_width="325dp"
            android:layout_height="125dp"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/view_rectangle_for_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_main" />

        <TextView
            android:id="@+id/textview_temp"
            android:layout_width="117dp"
            android:layout_height="55dp"
            android:text="@string/temp"
            android:textSize="40sp"
            android:textColor="#073509"
            app:layout_constraintBottom_toBottomOf="@+id/view_rectangle_for_weather"
            app:layout_constraintEnd_toEndOf="@+id/view_rectangle_for_weather"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="@+id/view_rectangle_for_weather"
            app:layout_constraintTop_toTopOf="@+id/view_rectangle_for_weather" />

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="148dp"
            android:layout_height="27dp"
            android:text="@string/date"
            android:textColor="#073509"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view_rectangle_for_weather"
            app:layout_constraintEnd_toStartOf="@+id/textview_temp"
            app:layout_constraintHorizontal_bias="0.653"
            app:layout_constraintStart_toStartOf="@+id/view_rectangle_for_weather"
            app:layout_constraintTop_toTopOf="@+id/view_rectangle_for_weather"
            app:layout_constraintVertical_bias="0.265" />

        <TextView
            android:id="@+id/textview_city"
            android:layout_width="148dp"
            android:layout_height="25dp"
            android:text="@string/city"
            android:textSize="20sp"
            android:textColor="#073509"
            app:layout_constraintBottom_toBottomOf="@+id/view_rectangle_for_weather"
            app:layout_constraintEnd_toStartOf="@+id/textview_temp"
            app:layout_constraintHorizontal_bias="0.653"
            app:layout_constraintStart_toStartOf="@+id/view_rectangle_for_weather"
            app:layout_constraintTop_toTopOf="@+id/view_rectangle_for_weather"
            app:layout_constraintVertical_bias="0.65" />

        <Button
            android:id="@+id/btn_object"
            android:layout_width="327dp"
            android:layout_height="61dp"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:text="@string/_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_objects" />

        <View
            android:id="@+id/view_object"
            android:layout_width="327dp"
            android:layout_height="61dp"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:layout_marginTop="28dp"
            android:background="@drawable/view_rectangle_object"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_objects" />

        <View
            android:id="@+id/view_add"
            android:layout_width="80dp"
            android:layout_height="15dp"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:background="@drawable/view_room_hall"
            app:layout_constraintBottom_toBottomOf="@+id/view_object"
            app:layout_constraintEnd_toEndOf="@+id/view_object"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="@+id/view_object"
            app:layout_constraintTop_toTopOf="@+id/view_object"
            app:layout_constraintVertical_bias="0.526" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>